--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "dependencies": {
     "@angular-slider/ngx-slider": "^18.0.0",
     "@angular/animations": "^19.0.0",
+    "@angular/cdk": "^19.2.19",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
     "@angular/fire": "^19.0.0",
     "@angular/forms": "^19.0.0",
     "@angular/google-maps": "^18.2.2",
-    "@angular/material": "^19.0.3",
+    "@angular/material": "^19.2.19",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
